# se_plugin_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindMinHook.cmake  FindSourceEngine.cmake
main/include/: template_plugin.hpp
main/src/: template_plugin.cpp
